# bevy_game_of_life

./: Cargo.toml  README.md
src/: cell.rs  game_of_life.rs  input.rs  main.rs
